--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@ code {
 @import url('https://fonts.googleapis.com/css2?family=Cookie&family=Great+Vibes&family=Pacifico&family=Press+Start+2P&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fascinate&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Joan&display=swap');
 
 @tailwind base;
 @tailwind components;
